--- a/public/assets/css/object.css
+++ b/public/assets/css/object.css
@@ -320,41 +320,36 @@
     opacity: 1;
 }
 
-.estimation ul {
+.estimation0 {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 50;
+}
+
+.estimation1 {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-items: center;
-    list-style-type: none;
-    padding-left: 5px;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+.estimation1 .feedback {
+    font-size: 20px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 5px;
 }
 
-.estimation ul li {
-    text-align: center;
-    padding-right: 40px;
+.estimation1 .golden {
+    color: gold;
 }
 
-.stars {
-    display: flex;
+.estimation1 .feedback p{
+    font-size: 14px;
+    margin: 0;
+    color: black;
 }
-
-.estimation ul li svg,
-p {
-    padding-right: 5px;
-    color: rgb(0 0 0 / 55%);
-    margin-bottom: 1rem;
-}
-
-.feedback {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-content: center;
-    justify-content: center;
-    align-items: stretch;
-}
-
 .recommend-catalog {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
