--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -720,8 +720,8 @@ pre code {
 .properties_grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 3%;
-    margin-bottom: 4em;
+    grid-gap: 20px 30px;
+    margin-bottom: 40px;
 }
 
 /*- Васенин С.А. 2023-11-04*/
