--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14596,7 +14596,7 @@ textarea.form-control {
 }
 
 /*scroll-to-top-button*/
-#myBtn {
+.myBtn {
     display: none;
     position: fixed;
     bottom: 40px;
@@ -14612,6 +14612,237 @@ textarea.form-control {
     font-size: 18px;
 }
 
-#myBtn:hover {
+.myBtn:hover {
     background-color: #e88941;
+}
+
+
+.site-review-form {
+    display: flex;
+    justify-content: center;
+}
+
+
+#feedback-form { /* вся форма */
+    max-width: 550px;
+    padding: 2%;
+    background: #f1f1f1;
+    align-items: center;
+    display: none;
+    margin: 20px;
+    border-radius: 10px;
+}
+#feedback-form label { /* наименование полей */
+    float: left;
+    display: block;
+    clear: right;
+}
+#feedback-form .w100 { /* поля */
+    float: right;
+    max-width: 400px;
+    width: 97%;
+    margin-bottom: 1em;
+    padding: 1.5%;
+}
+#feedback-form .border { /* граница полей */
+    border-radius: 1px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #C0C0C0 #D9D9D9 #D9D9D9;
+    box-shadow: 0 1px 1px rgba(255,255,255,.5), 0 1px 1px rgba(0,0,0,.1) inset;
+}
+#feedback-form .border:focus {
+    outline: none;
+    border-color: #abd9f1 #bfe3f7 #bfe3f7;
+}
+#feedback-form .border:hover {
+    border-color: rgb(46, 118, 189);
+}
+#feedback-form .border:focus::-moz-placeholder { /* убрать при фокусе первоначальный текст поля */
+    color: transparent;
+}
+#feedback-form .border:focus::-webkit-input-placeholder {
+    color: transparent;
+}
+#feedback-form .border:not(:focus):not(:hover):valid { /* правильно заполненные поля */
+    opacity: .8;
+}
+#submitFF { /* кнопка "Отправить" */
+    padding: 2%;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 0 0 0 1px rgba(0,0,0,.2) inset;
+    background: rgb(46, 86, 208);
+    color: #fff;
+}
+#feedback-form br {
+    height: 0;
+    clear: both;
+}
+#submitFF:hover {
+    background: #2075c4;
+}
+#submitFF:focus {
+    box-shadow: 0 1px 1px #fff, inset 0 1px 2px rgba(0,0,0,.8), inset 0 -1px 0 rgba(0,0,0,.05);
+}
+
+/*форма Вопрос по сайту*/
+
+.connection-form input[type=text],
+.connection-form input[type=email],
+.connection-form input[type=phone],
+.connection-form textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+}
+
+.connection-form textarea {
+    height: 150px;
+    resize: none;
+}
+
+
+.connection-form input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+
+.connection-form input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+.connection-form {
+    max-width: 500px;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.overlay {
+    height: 100%;
+    width: 100%;
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #4b69bd;
+    opacity: 0.95;
+    z-index: 200;
+}
+
+.overlay-content {
+    width: 100%;
+    margin-top: 30px;
+    z-index: 300;
+}
+
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #e88941;
+    display: block;
+    transition: 0.3s;
+}
+
+.overlay label,
+.overlay p {
+    color: rgb(0 0 0 / 75%);
+}
+.overlay a:hover,
+.overlay a:focus {
+    color: #f1f1f1;
+}
+
+.overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+}
+
+@media screen and (max-height: 450px) {
+    .overlay a {
+        font-size: 20px
+    }
+
+    .overlay .closebtn {
+        font-size: 40px;
+        top: 15px;
+        right: 35px;
+    }
+}
+
+.question {
+    width: 100px;
+    position: fixed;
+    top: 80%;
+    left: 30px;
+    z-index: 100;
+    background-image: url('/assets/images/question.png');
+    background-size: contain;
+    cursor: pointer;
+    opacity: 0.7;
+    height: 0;
+    animation: showDiv 15s forwards;
+}
+
+@keyframes showDiv {
+
+    0%,
+    99% {
+        height: 0;
+    }
+
+    100% {
+        height: 100px;
+    }
+}
+
+.question:hover {
+    opacity: 1;
+}
+
+.question .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #4b69bd;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+    top: -5px;
+    left: 105%;
+}
+
+.question .tooltiptext::after {
+    content: " ";
+    position: absolute;
+    top: 50%;
+    right: 100%;
+    margin-top: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent #4b69bd transparent transparent;
+}
+
+.question:hover .tooltiptext {
+    visibility: visible;
+    opacity: 0.8;
 }
