--- a/public/assets/css/addPayment.css
+++ b/public/assets/css/addPayment.css
@@ -17,7 +17,7 @@ body {
   padding-right: 50px;
   padding-top: 30px;
   padding-bottom: 30px;
-  
+
   margin-top: 50px;
   margin-bottom: 80px;
 
@@ -27,7 +27,7 @@ body {
 
   border-radius: 16px;
   background-color: white;
-  
+
   border: 2px solid #1B1B1B;
   box-sizing: border-box;
   box-shadow: 6px 6px 0px #1B1B1B;
@@ -71,7 +71,8 @@ input {
   transition: 0.2s;
 }
 
-textarea:focus, input:focus{
+textarea:focus,
+input:focus {
   outline: none;
   background: #F9E450;
   border: 3px solid #1B1B1B;
@@ -107,17 +108,17 @@ span {
   background-color: #F9E450;
   border: 2px solid #1B1B1B;
   box-sizing: border-box;
-  border-radius: 16px;
+  border-radius: 16px !important;
   padding: 16px 32px 16px 16px;
   text-align: center;
   font-weight: 800;
   margin-top: 20px;
-  
+
   width: 141px;
   height: 56px;
   left: 16px;
   top: 88px;
-  
+
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -148,4 +149,3 @@ span {
   display: flex;
   justify-content: center;
 }
-
