--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14623,7 +14623,8 @@ textarea.form-control {
 }
 
 
-#feedback-form { /* вся форма */
+#feedback-form {
+    /* вся форма */
     max-width: 550px;
     padding: 2%;
     background: #f1f1f1;
@@ -14632,58 +14633,76 @@ textarea.form-control {
     margin: 20px;
     border-radius: 10px;
 }
-#feedback-form label { /* наименование полей */
+
+#feedback-form label {
+    /* наименование полей */
     float: left;
     display: block;
     clear: right;
 }
-#feedback-form .w100 { /* поля */
+
+#feedback-form .w100 {
+    /* поля */
     float: right;
     max-width: 400px;
     width: 97%;
     margin-bottom: 1em;
     padding: 1.5%;
 }
-#feedback-form .border { /* граница полей */
+
+#feedback-form .border {
+    /* граница полей */
     border-radius: 1px;
     border-width: 1px;
     border-style: solid;
     border-color: #C0C0C0 #D9D9D9 #D9D9D9;
-    box-shadow: 0 1px 1px rgba(255,255,255,.5), 0 1px 1px rgba(0,0,0,.1) inset;
+    box-shadow: 0 1px 1px rgba(255, 255, 255, .5), 0 1px 1px rgba(0, 0, 0, .1) inset;
 }
+
 #feedback-form .border:focus {
     outline: none;
     border-color: #abd9f1 #bfe3f7 #bfe3f7;
 }
+
 #feedback-form .border:hover {
     border-color: rgb(46, 118, 189);
 }
-#feedback-form .border:focus::-moz-placeholder { /* убрать при фокусе первоначальный текст поля */
+
+#feedback-form .border:focus::-moz-placeholder {
+    /* убрать при фокусе первоначальный текст поля */
     color: transparent;
 }
+
 #feedback-form .border:focus::-webkit-input-placeholder {
     color: transparent;
 }
-#feedback-form .border:not(:focus):not(:hover):valid { /* правильно заполненные поля */
+
+#feedback-form .border:not(:focus):not(:hover):valid {
+    /* правильно заполненные поля */
     opacity: .8;
 }
-#submitFF { /* кнопка "Отправить" */
+
+#submitFF {
+    /* кнопка "Отправить" */
     padding: 2%;
     border: none;
     border-radius: 3px;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.2) inset;
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, .2) inset;
     background: rgb(46, 86, 208);
     color: #fff;
 }
+
 #feedback-form br {
     height: 0;
     clear: both;
 }
+
 #submitFF:hover {
     background: #2075c4;
 }
+
 #submitFF:focus {
-    box-shadow: 0 1px 1px #fff, inset 0 1px 2px rgba(0,0,0,.8), inset 0 -1px 0 rgba(0,0,0,.05);
+    box-shadow: 0 1px 1px #fff, inset 0 1px 2px rgba(0, 0, 0, .8), inset 0 -1px 0 rgba(0, 0, 0, .05);
 }
 
 /*форма Вопрос по сайту*/
@@ -14763,6 +14782,7 @@ textarea.form-control {
 .overlay p {
     color: rgb(0 0 0 / 75%);
 }
+
 .overlay a:hover,
 .overlay a:focus {
     color: #f1f1f1;
@@ -14825,20 +14845,27 @@ textarea.form-control {
     text-align: center;
     padding: 5px 0;
     border-radius: 6px;
+    border: white 1px solid;
     position: absolute;
     z-index: 1;
-    top: -5px;
+    top: 12px;
     left: 105%;
 }
 
-.question .tooltiptext::after {
+.question .tooltiptext::after,
+.question .tooltiptext::before {
     content: " ";
     position: absolute;
     top: 50%;
     right: 100%;
     margin-top: -5px;
-    border-width: 5px;
+    border-width: 6px;
     border-style: solid;
+    border-color: transparent white transparent transparent;
+}
+
+.question .tooltiptext::after {
+    border-width: 5px;
     border-color: transparent #4b69bd transparent transparent;
 }
 
