--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -149,9 +149,9 @@ strong {
     font-weight: bolder;
 }
 
-small {
+/*small {
     font-size: 80%;
-}
+}*/
 
 sub,
 sup {
@@ -181,7 +181,7 @@ a:hover {
 }
 
 a:not([href]):not([tabindex]) {
-    color: inherit;
+    /*color: inherit;*/
     text-decoration: none;
 }
 
@@ -454,7 +454,7 @@ hr {
 
 small,
 .small {
-    font-size: 80%;
+    /*font-size: 80%;*/
     font-weight: 400;
 }
 
