--- a/public/assets/css/cabinet.css
+++ b/public/assets/css/cabinet.css
@@ -70,6 +70,8 @@
     margin: 0 5px 0 0;
     border-radius: 50%;
     background: #6c4690;
+    cursor: pointer;
+
 }
 
 .no-avatar-block-content {
