--- a/public/assets/css/feedbackForm.css
+++ b/public/assets/css/feedbackForm.css
@@ -1,11 +1,57 @@
-  .feedbackSend{
+  .feedbackSend {
     display: flex;
     justify-content: center;
     margin-top: 30px;
-    color: black;
+  }
+
+  .feedbackSend button {
+    padding: 15px;
+    border-radius: 10px;
+    font-weight: bold;
+    background: #e88941 !important;
+    border: 1px solid #e88941 !important;
+    color: #fff !important;
+  }
+
+  .feedbackSend button:hover {
+    border: 1px solid #e88941 !important;
+    background: white !important;
+    color: #e88941 !important;
   }
 
   .buttons_form {
     display: flex;
     justify-content: space-between;
+    padding-left: 13px;
+  }
+
+  .btn-exit {
+    padding: 2%;
+    border: none;
+    border-radius: 3px !important;
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, .2) inset;
+    background: #e88941;
+    color: #fff;
+  }
+
+  .btn-exit:hover {    
+    background: #ec995a;
+  }
+
+  .site-review-form {
+    position: fixed;
+    top: 20%;
+    left: 50%;
+    z-index: 300;
+    margin-left: -240px;
+  }
+
+  .site-review-form form {
+    margin: 0 !important;
+    box-shadow: 0 0 500px 2px black;
+    padding: 5% !important;
+  }
+
+  .site-review-form form label {
+    margin-left: 14px;
   }
