Главная страница. Стилистические правки

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12178,8 +12178,8 @@ h5,
 }
 
 .slider-text h1 {
-    font-size: 40px;
-    color: #252d2f;
+    font-size: 38px;
+    color: #3a4449;
     line-height: 1.2;
     font-weight: 500;
 }
