Правки стиля и админки

--- a/public/assets/css/cabinet.css
+++ b/public/assets/css/cabinet.css
@@ -39,7 +39,7 @@
     display: block;
     font-size: 14px;
     font-weight: 500;
-    color: #4b69bd;
+    color: #eeedf2;
 }
 
 .auth-nav-span:hover {
