--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14238,3 +14238,10 @@ textarea.form-control {
         stroke-dashoffset: -136px;
     }
 }
+
+.snowflake {
+    position: absolute;
+    content: '';
+    top: 0;
+    right: 0;
+}
