--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -2406,3 +2406,9 @@ textarea.form-control {
     stroke-dashoffset: -136px;
   }
 }
+.snowflake{
+	position: absolute;
+	content: '';
+	top: 0;
+	right: 0;
+}
